unpackaged/main/default/objects/ET_Invoice_Lines__mdt/ET_Invoice_Lines__mdt.object-meta.xml
<CustomObject>
    <label>ET Invoice Lines</label>
    <pluralLabel>ET Invoice Lines</pluralLabel>
</CustomObject>