unpackaged/main/default/objects/ET_Invoice_Lines__mdt/fields/ET_Department__c.field-meta.xml
<CustomField>
    <fullName>ET_Department__c</fullName>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>