unpackaged/main/default/objects/ET_Invoice_Lines__mdt/fields/ET_LineType__c.field-meta.xml
<CustomField>
    <fullName>ET_LineType__c</fullName>
    <label>LineType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>