unpackaged/main/default/objects/ET_Invoice_Lines__mdt/fields/ET_Project__c.field-meta.xml
<CustomField>
    <fullName>ET_Project__c</fullName>
    <label>Project</label>
    <length>40</length>
    <type>Text</type>
</CustomField>