unpackaged/main/default/objects/ET_Invoice_Lines__mdt/fields/ET_ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ET_ServiceType__c</fullName>
    <label>ServiceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>