unpackaged/main/default/objects/ET_Invoice_Lines__mdt/fields/ET_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>ET_Tax_Amount__c</fullName>
    <label>Tax Amount</label>
    <length>40</length>
    <type>Text</type>
</CustomField>