unpackaged/main/default/objects/ET_Invoice_Lines__mdt/fields/ET_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>ET_Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>