unpackaged/main/default/objects/ET_Invoice_Lines__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ET_Department__c</columns>
    <columns>ET_LineType__c</columns>
    <columns>ET_Project__c</columns>
    <columns>ET_ServiceType__c</columns>
    <columns>ET_Tax_Amount__c</columns>
    <columns>ET_Tax_Code__c</columns>
    <columns>ET_Tax_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>